--- a/movie/index.html
+++ b/movie/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="matchSection">
@@ -12,6 +12,6 @@
 
         </ul>
     </div>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
